# ModelViewer-Qt6

./: README.md
docs/: 01_ModelViewer-Qt5_架构设计文档.md  02_ModelViewer_RHI迁移文档.md  03_新增功能说明.md
src/: CMakeLists.txt  README.md  main.cpp
src/core/: CpuMesh.h  Light.h  Material.h  README.md
src/loader/: ModelLoader.cpp  ModelLoader.h  README.md
src/math/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  README.md  TrackBall.cpp  TrackBall.h
src/renderer/: README.md  RhiMesh.cpp  RhiMesh.h  RhiRenderer.cpp  RhiRenderer.h
src/shaders/: README.md  axis.frag  axis.geom  axis.vert  background.frag  background.vert  brdf.frag  brdf.vert  clipped_mesh.frag  clipped_mesh.vert  clipping_plane.frag  clipping_plane.vert  debug_quad.vert  debug_quad_depth.frag  face_normal.geom  face_normal.vert  facenormal.geom  irradiance_convolution.frag  light_cube.frag  light_cube.vert  normals.frag  normals.geom  normals.vert  phong.frag  phong.vert  prefilter.frag  selection.frag  selection.vert  shadow_mapping_depth.vert  skybox.frag  skybox.vert  subdiv.geom  text.frag  text.vert  twoside_per_fragment.frag  twoside_per_fragment.geom  twoside_per_fragment.vert  vertex_normal.frag  vertex_normal.geom  vertex_normal.vert  (+2 more)
src/ui/: LightDialog.cpp  LightDialog.h  MainWindow.cpp  MainWindow.h  MaterialDialog.cpp  MaterialDialog.h  README.md  RhiWidget.cpp  RhiWidget.h
